# algo-energy-web

./: .gitignore  CLAUDE.md  CNAME  METHODOLOGY.md  README.md  data.html  index.html  kontakt.html  proces.html  pyproject.toml  reseni.html
.claude/: settings.json
.claude/agents/: code-quality-validator.md  code-reviewer.md  docs-updater.md  pr-writer.md
.claude/skills/edit-permissions/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: fetch-entsoe-data.yml  fetch-ote-data.yml  fetch-ro-dam-data.yml  lint.yml
assets/: styles.css
data/cz/afrr-accepted-reservation-bids/: 2026.csv
data/cz/da-hourly/: 2026.csv
data/cz/da-qh/: 2025.csv  2026.csv
data/cz/mfrr-accepted-reservation-bids/: 2026.csv
data/entsoe/: afrr_stats.csv  mfrr_stats.csv
data/entsoe/afrr/: 2025.csv  2026.csv
data/entsoe/cz/afrr/: 2026.csv
data/entsoe/mfrr/: 2025.csv  2026.csv
data/entsoe/ro/mfrr/: 2024.csv  2025.csv
data/hourly/: 2024.csv  2025.csv  2026.csv
data/qh/: 2025.csv  2026.csv
data/ro/afrr-accepted-reservation-bids/: 2024.csv  2025.csv  2026.csv
data/ro/da-hourly/: 2026.csv
data/ro/hourly/: 2025.csv  2026.csv
data/ro/mfrr-accepted-reservation-bids/: 2026.csv
scripts/: compute_entsoe_stats.py  debug_entsoe_xml.py  fetch_entsoe.py  fetch_ote.py  fetch_ro_dam.py
